# AI-Elderly-Care-Health-Report-Multi-Agent-System

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-family.txt  requirements.txt  restart_backend.sh  setup.py  start.sh  start_backend.sh  start_server.sh  test_api_server.py  test_family_backend.py  test_system.sh  多轮对话问题与数据需求文档.md  最终生成报告-示例.md  环境配置完成.txt  系统架构与Prompt调优指南.md  网络问题说明.md
api/: __init__.py  auth_routes.py  auth_service.py  counseling_service.py  doctor_routes.py  family_routes.py  mappers.py  report_utils.py  schemas.py  security.py  server.py
api/services/: __init__.py  google_stt_stream.py
code/: chat_cli.py  generate_3_reports.py  knowledge_agent.py  make_test_samples.py  multi_agent_system_v2.py  rag_agent_cli.py  run_and_evaluate.py  run_parallel_batches.py  run_v2.py
code/evaluation/: evaluator.py  metrics.py  utils.py
code/memory/: __init__.py  conversation_manager.py  family_caregiver_manager.py  family_questions.py  profile_extract_agent.py  user_profile_store.py
code/rag/: __init__.py  agent.py  page_index.py  utils.py
core/: auth_manager.py  db_migrations.py  family_data_manager.py  workspace_manager.py
data/: users.db
data/test_samples/: index.json  sample_1_status0_81_чФ╖.json  (+2 more)
docs/: AI养老健康Agent架构设计文档.md  backend-api-guide.md  医生端功能需求.md  报告评测.md  新版报告架构设计方案.md  问题修改.md
result/: report_status0_81_男.md  report_status1_100_男.md  report_status2_102_女.md  result_status0_81_男.json  result_status1_100_男.json  result_status2_102_女.json
tests/: test_evaluation_pipeline.py  test_report_utils.py
(+13 files in other folders)
