[project]
name = "ai-elderly-care-health-report-multi-agent-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.104.0",
    "google-cloud-speech>=2.35.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "python-multipart>=0.0.6",
    "flashrank>=0.2.10",
    "langchain>=1.2.7",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.7",
    "langchain-pinecone>=0.2.13",
    "langgraph>=1.0.7",
    "load-dotenv>=0.1.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "pinecone-client>=6.0.0",
    "pypdf>=6.6.2",
    "sentence-transformers>=5.2.2",
    "torch>=2.9.0,<=2.9.1",
    "python-dotenv>=1.2.2",
]
